specs/014-string-methods/examples/invalid/unknown-method.ts
const s: string = "hello";
// `reverse` is not a supported string method.
console.log(s.reverse());
